--- a/css/styles.css
+++ b/css/styles.css
@@ -406,11 +406,12 @@ a:hover {
   display: flex;
   flex-direction: column;
   gap: 1rem; 
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .update-row {
-  background-color: #222; 
+  background-size: cover;
+background-position: center;  
   border-radius: 8px;
   padding: 5rem;
   color: white; 
