--- a/css/styles.css
+++ b/css/styles.css
@@ -311,35 +311,32 @@ a:hover {
 /* Media querie for smaller screens */
 
 @media (max-width: 768px) {
-  nav {
-    justify-content: space-between;
-    padding: 1rem;
-    position: relative;
+
+  #nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    top: 5rem;
+    right: 0;
+    background-color: #121212;
   }
 
   .hamburger {
     display: block;
-    background: none;
-    border: none;
-    font-size: 2rem;
-    color: white;
-    cursor: pointer;
-    z-index: 20;
   }
 
-  ul {
+  .dropdown-menu {
     display: none;
-    flex-direction: column;
-    gap: 1rem;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: #121212;
-    width: 200px;
-    padding: 1rem;
-    border-radius: 8px;
-    z-index: 15;
+    position: static;
+    background-color: #1a1a1a;
   }
+
+  .dropdown:hover .dropdown-menu {
+    display: block;
+  }
+}
+
 
   ul.active {
     display: flex;
