--- a/css/styles.css
+++ b/css/styles.css
@@ -310,7 +310,6 @@ a:hover {
 
 /* Media querie for smaller screens */
 
-
 @media (max-width: 768px) {
 
   nav {
@@ -319,9 +318,7 @@ a:hover {
 
   .logo-container,
   .banner-buttons {
-    display: none;
-  }
-
+    display: none; 
   }
 
   ul.active {
@@ -337,32 +334,37 @@ a:hover {
     padding: 0.4rem 0.8rem;
   }
 
-  .roamap {
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 2rem;
-  }
-
-  .update-row {
-    flex: 1 1 45%;
-    min-height: 200px;
-  }
-
-  #roadmap-t1 {
-    font-size: 3rem;
-  }
-
-  .road-banner-image {
-    height: 500px;
-  }
-
-  .banner-buttons a {
-    font-size: 0.9rem;
-    padding: 0.6rem 1rem;
+  .translucent-form {
     width: 100%;
-    max-width: 200px;
-    text-align: center;
+    max-width: 400px; 
+    padding: 1.5rem; 
+    margin: 0 auto; 
   }
+
+  .rowcolumns {
+    width: 100%; 
+    margin-bottom: 1rem; 
+  }
+
+  label {
+    font-size: 1rem; 
+  }
+
+  input, select, button {
+    width: 100%; 
+    padding: 1rem; 
+    font-size: 1rem; 
+  }
+
+  .submit-button button {
+    font-size: 1.2rem; 
+    padding: 1rem; 
+  }
+
+  .password-requirements {
+    font-size: 0.9rem; 
+  }
+}
 
 /* Media querie for larger screens */
 
