--- a/css/styles.css
+++ b/css/styles.css
@@ -337,10 +337,9 @@ a:hover {
   .translucent-form {
     width: 100%;
     max-width: 400px; 
-    padding: 1.5rem; 
-    margin: 0 auto; 
+    padding: 1.5
   }
-
+  
   .rowcolumns {
     width: 100%; 
     margin-bottom: 1rem; 
