--- a/css/styles.css
+++ b/css/styles.css
@@ -675,7 +675,7 @@ a:hover {
     padding: 0.5rem;
     margin: 10px;
     background-color: #7f7fb6;
-    box-shadow: #0f1115 1px 10px 1px 1px;
+    box-shadow: #000000 1px 10px 1px 1px;
     border-radius: 10%1.666666666666667em; /* 50 / 30 = 1.666666666666667 */
   }
 
@@ -685,6 +685,11 @@ a:hover {
     color: #fefefe;
     margin-right: 3.6em; /* Space between label and input */
   }
+
+  .active {
+    border: 2px solid hsl(56, 71%, 64%);
+    background-color: rgba(255, 255, 0, 0.2); /* Optional highlight */
+}
 
 
   /*Sign-In page Button styles */
@@ -719,3 +724,9 @@ a:hover {
     background: hsl(56, 71%, 64%);
     box-shadow: 0 0 30px hsl(56, 100%, 68%);
   }
+
+  /* Sign-In page input styles */
+  input {
+    text-align: center; /* Center text horizontally */
+    vertical-align: middle; /* Align text vertically */
+}
