--- a/css/styles.css
+++ b/css/styles.css
@@ -309,6 +309,13 @@ a:hover {
 }
 
 /* Media querie for smaller screens */
+@media (max-width: 425px) {
+  
+  img2 {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
 
 @media (max-width: 768px) {
 
@@ -362,6 +369,11 @@ a:hover {
 
   .password-requirements {
     font-size: 0.9rem; 
+  }
+
+  img2 {
+    max-width: 100%;
+    max-height: 100%;
   }
 }
 
