--- a/css/styles.css
+++ b/css/styles.css
@@ -309,13 +309,7 @@ a:hover {
 }
 
 /* Media querie for smaller screens */
-@media (max-width: 425px) {
-  
-  img2 {
-    max-width: 100%;
-    max-height: 100%;
-  }
-}
+
 
 @media (max-width: 768px) {
 
@@ -641,7 +635,7 @@ a:hover {
     max-height: 30%; 
     margin: auto;
     position: absolute;
-    top: 50%; 
+    top: 200px; 
     left: 50%; 
     transform: translate(-50%, -50%); 
     background-color: rgba(1, 13, 72, 0.1); 
@@ -685,7 +679,7 @@ a:hover {
     align-items: center; 
     margin-bottom: 1rem; 
     padding: 0.5rem;
-    margin: 10px;
+    margin: 1em;
     background-color: #7f7fb6;
     box-shadow: #000000 1px 10px 1px 1px;
     border-radius: 10%1.666666666666667em; /* 50 / 30 = 1.666666666666667 */
