--- a/css/styles.css
+++ b/css/styles.css
@@ -643,8 +643,8 @@ a:hover {
 
   /* Sign In transparent form overlay */
   .translucent-form-overlay {
-    max-width: 100%; 
-    max-height: 30%; 
+    width: 100%; 
+    height: 30%; 
     margin: auto;
     position: absolute;
     top: 250px; 
